--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       SERVICE_TAGS: dev
     working_dir: /var/www
     volumes:
-      - .:/var/www:delegated
+      - .:/var/www
       - ./docker-compose/php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - app-network
@@ -25,7 +25,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - .:/var/www:delegated
+      - .:/var/www
       - ./docker-compose/nginx:/etc/nginx/conf.d/
     networks:
       - app-network
