--- a/docker-compose/nginx/default.conf
+++ b/docker-compose/nginx/default.conf
@@ -9,9 +9,13 @@ server {
     }
 
     location ~ \.php$ {
+        include fastcgi_params;
         fastcgi_pass app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_read_timeout 300;
+        fastcgi_connect_timeout 300;
+        fastcgi_send_timeout 300;
         include fastcgi_params;
     }
 
